# mycopredict

./: .gitignore  .replit  Docker README.md  README.md  TODO.md  checkthis.md  pyproject.toml  replit.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
tb_app/: Dockerfile  README.md  app.py  requirements.txt  train_models.py  train_models3.py
tb_app/RESULTS/logs/: metrics.csv
tb_app/data/: test_dataset.csv  train_dataset.csv  val_dataset.csv
tb_app/models/: RandomForest_preprocessor.pkl  columns.pkl  lightgbm.pkl  xgboost.pkl
tb_app/static/: style.css
tb_app/templates/: landing.html  predict.html  result.html
